Fix text being cut off

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -179,7 +179,6 @@ td {
   text-overflow: ellipsis;
 
   white-space: nowrap;
-  overflow: hidden;
 }
 
 /* LOGIN */
